--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,12 +45,7 @@ body {
 
 main {
   display: flex;
-  flex-direction: row;
-  padding-left: 100px;
-}
-
-.main_centro {
-  width: 70%;
+  flex-direction: column;
 }
 
 .main_nav {
@@ -64,18 +59,22 @@ main {
 
 .main_nav h3 {
   color: #ffffff;
+  padding-left: 100px;
   font-size: 1.2rem;
   font-family: "Poppins", sans-serif;
 }
 
 .main_nav ul {
   display: flex;
-  gap:0.8em;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.8em;
   width: 100%;
 }
 
 .main_nav ul li {
-  padding: 1em 3em;
+  padding: 1em 5em;
   color: #ffffff;
   font-family: "Poppins", sans-serif;
   font-size: 0.8em;
@@ -90,12 +89,19 @@ main {
   background-color: #ffffff;
 }
 
+.conteudo {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
 .main_vitrine {
   display: flex;
   flex-direction: column;
   gap: 50px;
   height: auto;
   width: 100%;
+  padding-left: 100px;
   color: #ffffff;
   font-family: "Poppins", sans-serif;
 }
@@ -158,7 +164,8 @@ main {
 .main_playlist {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  align-items: center;
+  width: 40%;
 }
 
 .main_playlist h3 {
@@ -171,8 +178,8 @@ main {
 .playlist_ul {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 30px;
-  margin-top: 10px;
 }
 
 .playlist_li {
@@ -180,7 +187,6 @@ main {
   flex-direction: row;
   gap: 10px;
   height: 90px;
-  width: 350px;
   color: #ffffff;
   font-family: "Poppins", sans-serif;
   box-shadow: -2px 2px 10px #000000;
@@ -225,6 +231,10 @@ main {
   padding-bottom: 10px;
 }
 
+.playlist_main_bottom img {
+  width: 1em;
+}
+
 .playlist_main_bottom span {
   color: rgba(255, 255, 255, 0.5);
   font-size: 14px;
@@ -255,7 +265,6 @@ main {
 
 .delet_button button:hover {
   cursor: pointer;
-
   background-color: #ffffff;
 }
 
@@ -276,133 +285,4 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
-}
-
-@media (max-width: 800px) {
-  header {
-    position: relative;
-  }
-  .header_logo {
-    position: absolute;
-    top: 20px;
-    background: none;
-  }
-
-  .header_info {
-    height: 8rem;
-    background-position: center;
-  }
-  .header_info h1 {
-    display: none;
-  }
-  .header_info p {
-    display: none;
-  }
-  main {
-    flex-direction: column;
-    margin: 0px;
-    padding: 0px 20px;
-  }
-
-  .main_centro {
-    width: 100%;
-  }
-
-  .main_nav {
-    display: flex;
-    align-items: center;
-    height: 4rem;
-  }
-
-  .main_nav h3 {
-    margin: 0px;
-  }
-  .main_nav ul {
-    display: none;
-  }
-
-  .main_vitrine {
-    gap: 20px;
-  }
-
-  .main_card {
-    height: 32vh;
-    width: 100%;
-  }
-
-  .main_card_top {
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
-    padding: 0px;
-  }
-
-  .main_card_top h2 {
-    font-size: 2rem;
-    font-weight: 200;
-  }
-
-  .main_card_bottom {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0px;
-  }
-  .main_card_bottom p {
-    display: none;
-  }
-
-  .main_card_bottom button {
-    font-size: 1.2rem;
-    margin: 0px;
-    border: solid 2px #ffffff;
-    border-radius: 16px;
-    background-color: rgba(13, 13, 13, 0.1);
-    transition: ease-in-out 0.2s;
-  }
-
-  .main_card_bottom button:hover {
-    text-decoration: none;
-    background-color: rgba(13, 13, 13, 1);
-  }
-  .main_card_bottom button:active {
-    color: #0d0d0d;
-    background-color: #ffffff;
-  }
-
-  .main_playlist {
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-  }
-
-  .main_playlist h3 {
-    margin: 2rem 0px;
-  }
-
-  .playlist_li {
-    justify-content: center;
-    width: 100%;
-  }
-  .playlist_main{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: start;
-    width: 60%;
-  }
-
-  .playlist_main_top{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: start;
-  }
-
-  .playlist_main_bottom{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: start;
-  }
 }
