--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -53,7 +53,7 @@
     display: none;
   }
 
-  .conteudo{
+  .contents{
     flex-direction: column;
     align-items: center;
     justify-content: center;
